# RustWorkspaceTemplate

./: Cargo.toml
app/: Cargo.toml
deploy/src/: main.rs
