[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["Pouriya Zarbafian <pouriya.zarbafian@gmail.com>"]

exclude = [
    "tests/*",
    ".gitignore",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
